# depmap-omics-wgs

./: .dockstore.yml  .env.dist  .gcloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  ariadne-dev.toml  ariadne-prod.toml  ariadne-staging.toml  config.toml  deploy.sh  main.py  pyproject.toml  requirements.txt  short_read_remap.wdl
.claude/: settings.json
.github/workflows/: run_checks.yml  run_checks_and_tests.yml
depmap_omics_wgs/: __main__.py  data.py  gcs.py  types.py  utils.py
docker/: msisensor2.Dockerfile  purecn.Dockerfile
gql/: omics_sequencing.gql  sequencing_alignment.gql  task_entity.gql  task_result.gql  terra_sync.gql
gumbo_gql_client/: __init__.py  enums.py  get_task_results.py  gumbo_client.py  input_types.py  insert_sequencing_alignments.py  insert_task_entities.py  insert_task_results.py  insert_terra_sync.py  sequencing_ids.py  sequencing_task_entities.py  unprocessed_sequencings.py  update_sequencing_alignment.py  wgs_sequencing_alignments.py  wgs_sequencings.py
notebooks/: compare_msi_output.py.ipynb
omics_wgs_pipeline/: __main__.py  data.py  metadata.py  terra.py  terra_cleanup.py  terra_workflow.py  types.py  utils.py  validators.py  wdl.py
scratch/: cmc.py  compare_filter_mutect.py  compare_msi_output_utils.py  compre_msi_output.py  copy_legacy_msi.py  copy_legacy_mut.py  copy_legacy_sv.py  copy_wes_alt_bams.py  fix_filt_urls.py  fix_legacy_sv_variants.py  generate_bq_diff_tables.py  hess_csv_to_tab.py  load_new_muts_to_bq.py  load_old_muts_to_bq.py  load_old_somatic_to_bq.py  peddep_temp.py  replace_bams.py  seed_preproc_task_results.py  seed_task_results.py  seed_wgs_sample.py  sj_fastqs.py  storage_costs_analyze.py  validate_new_muts.py  workflow_costs.py  workflow_costs_analyze.py
workflows/align_wgs_sample/: README.md  align_wgs_sample.json  align_wgs_sample.wdl  align_wgs_sample_inputs.json  bwa-mem2.Dockerfile
workflows/annotate_mutations/: README.md  annotate_mutations.json  annotate_mutations.wdl  annotate_mutations_inputs.json  bcftools.Dockerfile  ensembl_vep.Dockerfile  open_cravat.Dockerfile  snpeff_snpsift.Dockerfile  vcf2maf.Dockerfile
workflows/annotate_mutations/annotate-mutations-postprocess/: Dockerfile  README.md  config.toml  pyproject.toml
workflows/annotate_mutations/annotate-mutations-postprocess/annotate_mutations_postprocess/: __main__.py  annotation.py  conversion.py  gc.py  maf.py  merging.py  utils.py  vcf_utils.py
workflows/annotate_mutations/annotate-mutations-postprocess/tests/: maf_test.py
workflows/annotate_mutations/vcf-to-depmap/: Dockerfile  README.md  config.toml  pyproject.toml
workflows/annotate_mutations/vcf-to-depmap/vcf_to_depmap/: __main__.py  annotation.py  conversion.py  utils.py  vcf_utils.py
workflows/annotate_mutations_merge/: annotate_mutations_merge.json  annotate_mutations_merge.wdl  annotate_mutations_merge_inputs.json
workflows/annotate_structural_variants/: README.md  annotate_structural_variants.json  annotate_structural_variants.wdl  annotate_structural_variants_inputs.json  ngs-bits.Dockerfile
workflows/bam_to_cram/: README.md  bam_to_cram.json  bam_to_cram.wdl
workflows/call_absolute_copy_numbers/: README.md  call_absolute_copy_numbers.json  call_absolute_copy_numbers.wdl
workflows/call_absolute_copy_numbers/purecn-postprocess/: Dockerfile  README.md  pyproject.toml
workflows/call_absolute_copy_numbers/purecn-postprocess/purecn_postprocess/: __main__.py  types.py  utils.py
workflows/call_absolute_copy_numbers/purecn-postprocess/tests/: utils_test.py
workflows/call_cnvs/: README.md  call_cnvs.json  call_cnvs.wdl  call_cnvs_inputs.json  call_segments.Dockerfile  samtools_extra.Dockerfile  segment.R
workflows/call_mutations/: README.md  call_mutations.json  call_mutations.wdl  call_mutations_inputs.json
workflows/call_mutations/call-mutations-postprocess/: Dockerfile  README.md  pyproject.toml
workflows/call_mutations/call-mutations-postprocess/call_mutations_postprocess/: __main__.py  utils.py
workflows/call_structural_variants/: README.md  call_structural_variants.json  call_structural_variants.wdl  call_structural_variants_inputs.json  manta.Dockerfile
workflows/common/: bcftools.Dockerfile  bedtools2.Dockerfile  open_cravat.Dockerfile  samtools.Dockerfile
workflows/compute_molecular_signatures/: README.md  compute_molecular_signatures.json  compute_molecular_signatures.wdl  compute_molecular_signatures_inputs.json  run_signature_analyzer.py  signature_analyzer.Dockerfile
workflows/compute_molecular_signatures/compute-molecular-signatures/: Dockerfile  README.md  pyproject.toml
workflows/compute_molecular_signatures/compute-molecular-signatures/compute_molecular_signatures/: __main__.py  tasks.py  types.py  utils.py
workflows/cram_to_bam/: README.md  cram_to_bam.json  cram_to_bam.wdl
workflows/debug_gatk/: debug_gatk.json  debug_gatk.wdl
workflows/fix_msi_dist/: fix_msi_dist.json  fix_msi_dist.wdl
workflows/fix_rg/: README.md  fix_rg.json  fix_rg.wdl  fix_rg_inputs.json
workflows/infer_msi_status/: README.md  infer_msi_status.json  infer_msi_status.wdl
workflows/make_guide_mutation_beds/: README.md  make_guide_mutation_beds.json  (+2 more)
workflows/postprocess_mutations/annotate-mutations-postprocess/: Dockerfile  pyproject.toml
workflows/postprocess_mutations/annotate-mutations-postprocess/annotate_mutations_postprocess/: __main__.py  maf.py  postprocess_utils.py  utils.py
workflows/postprocess_mutations/annotate-mutations-postprocess/tests/: maf_test.py  postprocess_utils_test.py
workflows/select_somatic_variants/select-somatic-variants/: Dockerfile  README.md  pyproject.toml
workflows/select_somatic_variants/select-somatic-variants/select_somatic_variants/: __main__.py  utils.py
workflows/select_somatic_variants/select-somatic-variants/tests/: utils_test.py
workflows/select_structural_variants/select-structural-variants/: Dockerfile  README.md  pyproject.toml
workflows/select_structural_variants/select-structural-variants/select_structural_variants/: __main__.py  utils.py
(+57 files in other folders)
