[project]
name = "depmap-omics-wgs"
version = "0.1.0"
description = ""
authors = []
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "ariadne-codegen>=0.14.0,<0.15",
    "pandas>=2.2.2,<3",
    "pandera[strategies]>=0.20.4,<0.21",
    "python-dotenv>=1.0.1,<2",
    "pydantic>=2.10.6,<3",
    "google-cloud-storage>=3.1.0,<4",
    "google-cloud-logging>=3.10.0,<4",
    "functions-framework>=3.5.0,<4",
    "typer>=0.16.0,<1",
    "pygithub>=2.3.0,<3",
    "pd-flatten>=0.1.1,<0.2",
    "google-cloud-secret-manager>=2.22.1,<3",
    "tqdm>=4.67.1,<5",
    "firecloud-api-cds>=0.2.0",
    "nebelung>=2.9.5,<3",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0,<0.13",
    "pyright>=1.1.402,<2",
    "jupyter>=1.0.0,<2",
    "pyliftover>=0.4.1,<0.5",
    "gffutils>=0.13,<0.14",
    "natsort>=8.4.0,<9",
    "bioblend>=1.5.0,<2",
    "google-cloud-bigquery>=3.33.0,<4",
    "pandas-stubs>=2.2.3.250527,<3",
    "pyarrow>=20.0.0",
    "fsspec>=2025.7.0",
    "gcsfs>=2025.7.0",
]

[[tool.uv.index]]
name = "public-python"
url = "https://us-central1-python.pkg.dev/cds-artifacts/public-python/simple/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
select = [
    "I",  # isort formatting
]
extend-include = ["*.ipynb"]
exclude = ["gumbo_gql_client"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["depmap_omics_wgs", "main.py"]
reportInvalidTypeVarUse = "none"
