[tool.poetry]
name = "annotate-mutations-postprocess"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "annotate_mutations_postprocess"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
typer = "^0.9.0"
click = "^8.1.7"
pandera = "^0.20.1"
case-converter = "^1.1.0"
bgzip = "^0.5.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"

[tool.ruff]
select = [
    "I",  # isort formatting
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
