[tool.poetry]
name = "annotate-mutations-postprocess"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "annotate_mutations_postprocess"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
pandera = "^0.21.0"
duckdb = "^1.1.3"
pyarrow = "^18.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"
ruff-lsp = "^0.0.59"
vcf-to-duckdb = "^0.1.0"

[tool.ruff]
select = [
    "I",  # isort formatting
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
