[tool.poetry]
name = "purecn-postprocess"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "purecn_postprocess"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
typer = "^0.12.3"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"

[tool.ruff]
select = [
    "I",  # isort formatting
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
