[tool.poetry]
name = "call-mutations-postprocess"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "call_mutations_postprocess"}]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.12.3"
click = "^8.1.7"
bgzip = "^0.4.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"

[tool.ruff]
select = [
    "I",  # isort formatting
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
