[project]
name = "compute-molecular-signatures"
version = "0.1.0"
description = "CLI for Python-based tasks in the compute_molecular_signatures workflow"
readme = "README.md"
requires-python = ">=3.14, <3.15"
dependencies = [
    "pandas>=2.3.0,<3.0",
    "pandera[strategies]>=0.29.0",
    "pyarrow>=23.0.1",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "pandas-stubs>=3.0.0.260204",
    "pyright>=1.1.408",
    "ruff>=0.14.14",
]

[tool.ruff]
select = [
    "I",  # isort formatting
]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["compute_molecular_signatures"]
