[tool.poetry]
name = "annotate-mutations-postprocess"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "annotate_mutations_postprocess"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
duckdb = "^1.1.3"
pyarrow = "^18.1.0"
typer = "^0.15.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.8"
pyright = "^1.1.400"
pytest = "^8.3.4"

[tool.ruff]
select = [
    "I",  # isort formatting
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
