[tool.poetry]
name = "select-somatic-variants"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "select_somatic_variants"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
duckdb = "^1.2.2"
pyarrow = "^18.1.0"
typer = "^0.15.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.0"
pyright = "^1.1.402"
pytest = "^8.3.4"
pandas-stubs = "^2.2.3.250527"

[tool.ruff]
select = [
    "I",  # isort formatting
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
