[project]
name = "select-structural-variants"
version = "0.1.0"
readme = "README.md"
requires-python = "~=3.12.9"
dependencies = [
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.2.3.250527",
    "pyright>=1.1.402",
    "ruff>=0.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["select_structural_variants"]

[tool.ruff]
select = [
    "I",  # isort formatting
]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["select_structural_variants"]
reportInvalidTypeVarUse = "none"
